[gd_scene format=3 uid="uid://niwxsx00utya"]

[ext_resource type="Texture2D" uid="uid://dh72pt7jxc4mn" path="res://npc/sprites/ghost_normal.png" id="1_ui2lu"]
[ext_resource type="Script" uid="uid://cghqrhsgxjhln" path="res://npc/scripts/neutral_ghost.gd" id="1_x636b"]
[ext_resource type="Texture2D" uid="uid://bdoapfbayq81m" path="res://props/sprites/dark_objects.png" id="3_x636b"]
[ext_resource type="Script" uid="uid://cpt2a5krnik32" path="res://props/scripts/propinteract_item.gd" id="4_nbxom"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dxxor"]

[sub_resource type="Animation" id="Animation_mujk7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ghost_drop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ghost_drop:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.52156866, 0.7529412, 0.73333335, 0)]
}

[sub_resource type="Animation" id="Animation_ui2lu"]
resource_name = "ghost_fading"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ghost_drop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5666666),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ghost_drop:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.52156866, 0.7529412, 0.73333335, 0), Color(0.52156866, 0.7529412, 0.73333335, 0.9019608)]
}

[sub_resource type="Animation" id="Animation_tjmiu"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.6666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_h1uug"]
resource_name = "idle_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_3ycn8"]
resource_name = "idle_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_br222"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.6666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ipypa"]
resource_name = "walk_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.6666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_be5ym"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_3p3ik"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_rhfvv"]
resource_name = "walk_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.6666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mujk7"]
_data = {
&"RESET": SubResource("Animation_mujk7"),
&"ghost_fading": SubResource("Animation_ui2lu"),
&"idle_down": SubResource("Animation_tjmiu"),
&"idle_left": SubResource("Animation_h1uug"),
&"idle_right": SubResource("Animation_3ycn8"),
&"idle_up": SubResource("Animation_br222"),
&"walk_down": SubResource("Animation_ipypa"),
&"walk_left": SubResource("Animation_be5ym"),
&"walk_right": SubResource("Animation_3p3ik"),
&"walk_up": SubResource("Animation_rhfvv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8t6eb"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x636b"]
size = Vector2(7, 11.465797)

[node name="Neutral_Ghost" type="CharacterBody2D" unique_id=795215098]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_x636b")
npc_name_ = "Ghost"

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=2040061317]
position = Vector2(0, -24)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_ui2lu")
hframes = 3
vframes = 3

[node name="Sprite2D-DialogueSprite" type="Sprite2D" parent="." unique_id=2035431031]
visible = false
position = Vector2(0, -28.5)
texture = ExtResource("1_ui2lu")
region_enabled = true
region_rect = Rect2(8, 1, 18, 19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1937331691]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_dxxor")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=426813130]
libraries/ = SubResource("AnimationLibrary_mujk7")
autoplay = &"idle_down"

[node name="Area2D" type="Area2D" parent="." unique_id=917331840]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=674034397]
modulate = Color(0.863281, 0.0910492, 0.0910492, 1)
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_8t6eb")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." unique_id=1630089345]
path_postprocessing = 1
simplify_path = true
avoidance_enabled = true
debug_enabled = true

[node name="ghost_drop" type="Sprite2D" parent="." unique_id=674493959]
modulate = Color(0.52156866, 0.7529412, 0.73333335, 0)
rotation = -0.5235988
texture = ExtResource("3_x636b")
region_enabled = true
region_rect = Rect2(228, 211, 9, 12)
script = ExtResource("4_nbxom")

[node name="Area2D" type="Area2D" parent="ghost_drop" unique_id=667779186]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ghost_drop/Area2D" unique_id=1014145259]
scale = Vector2(1, 1.04659)
shape = SubResource("RectangleShape2D_x636b")
debug_color = Color(0, 0, 0, 0.41960785)
